# snips

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: error.rs  lib.rs  main.rs  processor.rs  snippet.rs
tests/: basic.rs  cli.rs  hyphenated_names.rs  indentation.rs  indentation_edge_cases.rs  optional_end_markers.rs  spec.rs
tests/support/: mod.rs
