[package]
name = "snips"
version = "0.0.2"
edition = "2024"

authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Keep code snippets in mardown files in sync"
license = "MIT"
repository = "https://github.com/cortesi/snips"
keywords = ["snippets", "markdown"]


[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
dissimilar = "1"
thiserror = "1"
textwrap = "0.16"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
