[package]
name = "snips"
version = "0.0.4"
edition = "2024"

authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Keep code snippets in markdown files in sync"
license = "MIT"
repository = "https://github.com/cortesi/snips"
keywords = ["snippets", "markdown"]


[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
similar = "2"
thiserror = "1"
textwrap = "0.16"
once_cell = "1"
languages = "0.0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
