[package]
name = "snips"
version = "0.0.4"
edition = "2024"

authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Keep code snippets in markdown files in sync"
license = "MIT"
repository = "https://github.com/cortesi/snips"
keywords = ["snippets", "markdown"]


[lints.rust]
missing_docs = "warn"

# Enable briefly, run cargo clippy (without --tests and --examples), fix
# unused deps, then disable it again.
# unused_crate_dependencies = "warn"

[lints.clippy]
absolute_paths = "warn"
branches_sharing_code = "warn"
ignore_without_reason = "warn"
let_underscore_must_use = "warn"
many_single_char_names = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
self_named_module_files = "warn"
tests_outside_test_module = "warn"
use_self = "warn"
wildcard_dependencies = "warn"
cfg_not_test = "warn"
comparison_chain = "warn"
items_after_statements = "warn"
needless_pass_by_ref_mut = "warn"

# Settings with config values in clippy.toml
cognitive_complexity = "warn"
excessive_nesting = "warn"
too_many_lines = "warn"


[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
similar = "2"
thiserror = "2"
textwrap = "0.16"
once_cell = "1"
languages = "0.0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
